@@ -168,6 +168,7 @@ KallistiOS version 1.3.0 -----------------------------------------------
       requested type and supports the list of capabilities listed (i.e, the
       function_data of devinfo for that function has all the bits set that are
       set in the cap parameter [LS]
+- DC  Made vid_screen_shot support any of the video modes [DH]
 
 KallistiOS version 1.2.0 -----------------------------------------------
 - DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
